--- a/src/main/webapp/WEB-INF/pages/success.html
+++ b/src/main/webapp/WEB-INF/pages/success.html
@@ -1,6 +1,7 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>第一个SpringMVC结果页面</title>
 </head>
 <body>
