增加烟花表白界面，增加打字效果界面。

--- a/src/main/webapp/WEB-INF/pages/cutscenes.html
+++ b/src/main/webapp/WEB-INF/pages/cutscenes.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta charset="GBK">
     <title>Dear Honey</title>
     <link rel="stylesheet" href="/css/cutscenes.css" type="text/css">
     <script src="/js/cutscenesShowTime.js"></script>
@@ -15,7 +13,7 @@
 </div>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ed3073;">
-    æˆ‘ä»¬å·²ç»ç›¸è¯†äº†
+    ÎÒÃÇÒÑ¾­ÏàÊ¶ÁË
     <br/>
     <span id="span_dt_dt"></span>
 </p>
@@ -27,7 +25,7 @@
         init: function () {
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
-            S.UI.simulate("å¤©å¥‡|æˆ‘æ˜¯|ä½ çš„è€baby|é‡åˆ°ä½ |çœŸçš„|å¾ˆå¹¸è¿|æ­£åœ¨è¿›å…¥|#countdown 3|#time");
+            S.UI.simulate("ÌìÆæ|ÎÒÊÇ|ÄãµÄÀÏbaby|Óöµ½Äã|ÕæµÄ|ºÜĞÒÔË|ÕıÔÚ½øÈë|#countdown 3|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
