1.新开发球球吧，仅加入回贴页面，主页面之后设计。

--- a/src/main/webapp/WEB-INF/pages/cutscenes.html
+++ b/src/main/webapp/WEB-INF/pages/cutscenes.html
@@ -145,7 +145,7 @@
                                 if (sequence.length === 0) {
                                     S.Shape.switchShape(S.ShapeBuilder.letter(''));
                                 } else {
-                                    window.open('result', '_self');
+                                    window.open('result.html', '_self');
                                     performAction(sequence);
                                 }
                             } else {
