1.修复页面4的乱码问题； 2.增加球球吧主页； 3.设计芝加哥打字机的页面。

--- a/src/main/webapp/WEB-INF/pages/result.html
+++ b/src/main/webapp/WEB-INF/pages/result.html
@@ -10215,7 +10215,7 @@
 <!--            第五个界面-->
                 <div class="result-op c-container xpath-log">
                     <h3 class="t c-gap-bottom-small">
-                        <a href="tieitem" target="_self">球球吧-<font color="red">天奇</font>的亲儿子</a>
+                        <a href="postbar" target="_self">球球吧-<font color="red">天奇</font>的亲儿子</a>
                     </h3>
                     <style>
                         .op-tieba-general-mainpic {
