1.完成芝加哥打字机效果。 2.完成登录页面时的开场动画。 3.展示ppt时，新开一页，防止回退时候退不到首页。

--- a/src/main/webapp/WEB-INF/pages/result.html
+++ b/src/main/webapp/WEB-INF/pages/result.html
@@ -5,7 +5,6 @@
     <link rel="icon" sizes="any" mask="" href="//www.baidu.com/img/baidu_85beaf5496f291521eb75ba38eacbd87.svg">
     <title>我喜欢你_百度搜索！！！</title>
     <link rel="stylesheet" type="text/css" href="/css/result.css">
-
     <style data-for="result" type="text/css" id="css_newi_result">
         body {
             color: #333;
@@ -10104,7 +10103,7 @@
             <div id="content_left">
                 <div class="result c-container " id="1" srcid="1599" tpl="se_com_default" data-click="{'rsv_bdr':'0' }">
 <!--                    跳转第一个表白页面-->
-                    <h3 class="t"><a href="declaration" target="_self">"优雅女神"<font color="red">解天奇</font>，对她的表白可不能含糊~！</a></h3>
+                    <h3 class="t"><a href="codeprint" target="_self">"优雅女神"<font color="red">解天奇</font>，对她的表白可不能含糊~！</a></h3>
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="declaration"
                                                                   target="_self"><img class="c-img c-img6"
@@ -10114,7 +10113,7 @@
                             <div class="c-abstract">
                                 2019年12月18日 “优雅女神”奥黛丽赫本,她的13张美照,惊艳了一个世纪 影响力排名首位当之无愧的英国演员奥黛丽·赫本,她在第一次担任女主角的电影《罗马假日》中给世界留下了深刻的印象...
                             </div>
-                            <div class="f13"><a target="_self" href="declaration" class="c-showurl"
+                            <div class="f13"><a target="_self" href="codeprint" class="c-showurl"
                                                 style="text-decoration:none;">https://i.aitianqi.cn/&nbsp;</a>
                             </div>
                         </div>
@@ -10184,7 +10183,7 @@
                 </div>
 <!--            第四个界面-->
                 <div class="result c-container " id="9" srcid="1599" tpl="se_com_default" data-click="{'rsv_bdr':'0' }">
-                    <h3 class="t"><a href="pptshow" target="_self">哈哈<font color="red">天奇</font>的相册</a></h3>
+                    <h3 class="t"><a href="pptshow" target="_blank">哈哈<font color="red">天奇</font>的相册</a></h3>
                     <div class="c-row c-gap-top-small">
                         <div class="c-span18 c-span-last">
                             <div class="f13"><a target="_self" href="pptshow" class="c-showurl"
