1.增加地图旅游轨迹信息

--- a/src/main/webapp/WEB-INF/pages/amapshow.html
+++ b/src/main/webapp/WEB-INF/pages/amapshow.html
@@ -18,20 +18,65 @@
     });
     map.clearMap(); // 清除地图覆盖物
     var markers = [{
-        name: '天安门',
-        icon: 'https://aos-cdn-image.amap.com/sns/ugc/photo/ddef3ad045b743dfa1464e83cefc35b7.jpg',
-        position: [116.397428, 39.90923],
-        message:'与天奇的秘密之旅'
+        name: '南京老门东:喝口甜的~',
+        icon: 'image/map/6.26老门东.jpg',
+        position: [118.788027, 32.013065]
     }, {
-        name: 'giscafer',
-        icon: 'https://avatars0.githubusercontent.com/u/8676711?v=3&s=460',
-        position: [116.368904, 39.913423],
-        message:'与天奇的秘密之旅2'
+        name: '南京老门东(正门)',
+        icon: 'image/map/6.26老门东2.jpg',
+        position: [118.788891, 32.012813]
     }, {
-        name: 'gis520',
-        icon: 'https://avatars0.githubusercontent.com/u/17235971?v=3&s=200',
-        position: [116.335467, 39.907761],
-        message:'与天奇的秘密之旅3'
+        name: '南京夫子庙',
+        icon: 'image/map/6.26夫子庙.jpg',
+        position: [118.788765, 32.020748]
+    }, {
+        name: '南京汉中门北京烤鸭',
+        icon: 'image/map/6.26汉中门烤鸭.jpg',
+        position: [118.908928, 32.079834]
+    }, {
+        name: '南京弘阳广场印象汇',
+        icon: 'image/map/10.4弘阳.jpg',
+        position: [118.722368, 32.140499]
+    }, {
+        name: '宜州天地意式餐厅',
+        icon: 'image/map/9.19豪门国际.jpg',
+        position: [108.63343, 24.490992]
+    }, {
+        name: '宜州刘三姐故居',
+        icon: 'image/map/9.19刘三姐.jpg',
+        position: [108.675659, 24.535000]
+    }, {
+        name: '河池学院龙江河畔',
+        icon: 'image/map/9.14河池学院.jpg',
+        position: [108.666603, 24.49914]
+    }, {
+        name: '上海东方明珠',
+        icon: 'image/map/7.9上海东方明珠.jpg',
+        position: [121.499998, 31.239742]
+    }, {
+        name: '上海迪士尼公园',
+        icon: 'image/map/7.10上海迪士尼.jpg',
+        position: [121.48941, 31.40527]
+    }, {
+        name: '成都太古里',
+        icon: 'image/map/7.12成都太古里.jpg',
+        position: [104.083733, 30.653187]
+    }, {
+        name: '成都春熙路',
+        icon: 'image/map/7.12成都春熙路.jpg',
+        position: [104.077003, 30.655569]
+    }, {
+        name: '成都望江楼',
+        icon: 'image/map/7.13成都望江楼.jpg',
+        position: [103.971733, 30.317001]
+    }, {
+        name: '成都金沙遗址',
+        icon: 'image/map/7.14成都金沙遗址.jpg',
+        position: [104.012756, 30.681774]
+    }, {
+        name: '成都武侯祠',
+        icon: 'image/map/7.14成都武侯祠.jpg',
+        position: [104.047653, 30.647593]
     }];
     // 添加一些分布不均的点到地图上,地图上添加三个点标记，作为参照
     markers.forEach(function(marker) {
